# dapr-wasm

./: .gitignore  .gitmodules  CNAME  README.md  install.sh  makefile  restart.sh
.github/workflows/: main.yml  pages.yml
config/: binding.yaml  conf.json  configuration.yaml  cron.yaml  local-secret-store.yaml  pubsub.yaml  secrets.json  statestore.yaml
doc/: install.md  sidecar.graffle
docs/: CNAME  dapr-wasmedge.graffle  index.html  page.js  style.css
events-service/: Cargo.toml  run_events.sh
events-service/src/: main.rs
functions/classify/: Cargo.toml  build.sh
functions/classify/src/: infer.rs  lib.rs
functions/grayscale/: Cargo.toml  build.sh
functions/grayscale/src/: grayscale.rs  lib.rs  main.rs
image-api-classify/: Cargo.toml  README.md  run_classify.sh
image-api-classify/src/: main.rs
image-api-go/: build.sh  deps.sh  go.mod  go.sum  image_api.go  run_api_go.sh
image-api-grayscale/: Cargo.toml  build.sh  readme.md  run_grayscale.sh
image-api-grayscale/src/: main.rs
image-api-rs/: Cargo.toml  run_api_rs.sh
image-api-rs/src/: main.rs
image-api-rs/wasmedge-bindgen/: Cargo.toml
image-api-rs/wasmedge-bindgen/src/: lib.rs
image-api-wasi-socket-rs/: Cargo.toml  build.sh  run_api_rs.sh  run_api_wasi_socket_rs.sh
image-api-wasi-socket-rs/src/: main.rs
image-classification/: Cargo.toml  build.sh
image-classification/src/: grayscale.rs  lib.rs  main.rs
image-wasm-rs/: Cargo.toml  build.sh  install.sh
web/: index.html
web-port/: go.mod  go.sum  run_web.sh  web_port.go
web-port/static/: home.html  index.html  page.js  style.css
