[package]
name = "wasmedge_hyper_server_tflite"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
hyper_wasi = { version = "0.15", features = ["full"]}
tokio_wasi = { version = "1.21", features = ["rt", "macros", "net", "time", "io-util"]}
serde_json = "1.0"
image = { version = "0.23.14", default-features = false, features = ["gif", "jpeg", "ico", "png", "tiff", "webp", "bmp"]  }
wasi-nn = { version = "0.1.0" }
dapr_sdk_wasi = { git = "https://github.com/second-state/dapr-sdk-wasi" }
