[package]
name = "image-api-rs"
version = "0.1.0"
authors = ["yukang <moorekang@gmail.com>"]
edition = "2018"

[dependencies]
bytes = "1.0"
futures-core = "0.3"
futures-util = { version = "0.3", default-features = false }
log = "0.4.1"
httparse = "1.3.4"
http = "0.2.0"
twoway = "0.2.1"
tokio-util = { version = "0.6", optional = true, features= ["codec"] }
thiserror = "1.0"
warp = "0.3"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
tokio-stream = { version = "0.1" }
pretty_env_logger = "0.4"