[package]
name = "image-api-wasi-socket-rs"
version = "0.1.0"
authors = ["yukang <moorekang@gmail.com>"]
edition = "2018"

[dependencies]
bytes = "1.0"
log = "0.4.1"
http = "0.2.0"
twoway = "0.2.1"
thiserror = "1.0"
pretty_env_logger = "0.4"
wasmedge_wasi_socket = "0.1.0"
httpcodec = "0.2.3"
bytecodec = "0.4.15"
wasm-bindgen = "=0.2.61"
image = { version = "0.23.0", default-features = false, features = ["jpeg", "png", "gif"] }
imageproc = "0.21.0"