[package]
name = "wasm_vercel_example"
version = "0.1.0"
authors = ["ubuntu"]
edition = "2018"

[lib]
name = "classify_lib"
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "classify_bin"
path = "src/main.rs"

[dependencies]
wasmedge_tensorflow_interface = "^0.2.0"
wasm-bindgen = "=0.2.61"
image = { version = "0.23.0", default-features = false, features = ["jpeg", "png", "gif"] }
imageproc = "0.21.0"