[package]
name = "grayscale"
version = "0.1.0"
authors = ["WasmEdge"]
edition = "2021"


[lib]
name = "grayscale_lib"
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "grayscale"
path = "src/main.rs"

[dependencies]
wasm-bindgen = "=0.2.61"
image = { version = "0.23.0", default-features = false, features = ["jpeg", "png", "gif"] }
imageproc = "0.21.0"
wasmedge-bindgen = "0.4.0"
wasmedge-bindgen-macro = "0.4.0"
base64 = "0.13.0"
wasmedge_tensorflow_interface = "^0.2.0"
