[package]
name = "wasmedge-bindgen-host"
version = "0.2.1"
edition = "2021"
description = "Pass string, vec and primitive types from host to webassembly"
license = "MIT/Apache-2.0"
repository = "https://github.com/second-state/wasmedge-bindgen"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
num-derive = "0.3"
wasmedge-sys = "0.7.0"
wasmedge-types = "0.1.3"